--- a/Inutivent-iOS/Inutivent-iOS-Info.plist
+++ b/Inutivent-iOS/Inutivent-iOS-Info.plist
@@ -26,10 +26,10 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.inutilis.events</string>
+			<string>com.inutilis.gromf</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>inutivent</string>
+				<string>gromf</string>
 			</array>
 		</dict>
 	</array>
