--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 Inutivent-iOS.xcodeproj/project.xcworkspace
 Inutivent-iOS.xcodeproj/xcuserdata
+Gromf.xcodeproj/project.xcworkspace
+Gromf.xcodeproj/xcuserdata
