--- a/Inutivent-iOS/Gromf-Info.plist
+++ b/Inutivent-iOS/Gromf-Info.plist
@@ -37,6 +37,8 @@
 	<string>2.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIMainStoryboardFile~ipad</key>
