--- a/Inutivent-iOS/Gromf-Info.plist
+++ b/Inutivent-iOS/Gromf-Info.plist
@@ -37,6 +37,10 @@
 	<string>2.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch</string>
 	<key>UIMainStoryboardFile</key>
