new launch images

--- a/Inutivent-iOS/Gromf-Info.plist
+++ b/Inutivent-iOS/Gromf-Info.plist
@@ -42,7 +42,7 @@
 		<string>fetch</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>Launch</string>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIMainStoryboardFile~ipad</key>
